bug patch for scrolling overflow

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -145,6 +145,8 @@ nav {
     display: block;
     max-width: 100vw;
     min-height: calc(100vh - 80px);
+    padding: 0;
+    margin: 0;
     overflow-x: hidden;
 }
 
